<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@mipmap/bg_foreground"
    >

    <Button
        android:id="@+id/my_order_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_margin="10dp"
        android:text="@string/my_order"
        android:textAllCaps="false"
        android:onClick="gotoMyOrderPage"
        />
    <Button
        android:id="@+id/drinks_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="80dp"
        android:layout_marginHorizontal="60dp"
        android:text="@string/drinks"
        android:textAllCaps="false"
        android:onClick="gotoDrinkPage"
        android:padding="20dp"
        android:textSize="30sp"
        android:background="@drawable/rect"/>

    <Button
        android:id="@+id/snacks_btn"
        android:layout_toEndOf="@id/drinks_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="80dp"
        android:text="@string/snacks"
        android:textAllCaps="false"
        android:onClick="gotoSnackPage"
        android:padding="20dp"
        android:textSize="30sp"
        android:background="@drawable/rect"/>

    <Button
        android:id="@+id/foods_btn"
        android:layout_below="@id/drinks_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginHorizontal="60dp"
        android:text="@string/foods"
        android:textAllCaps="false"
        android:onClick="gotoFoodPage"
        android:padding="20dp"
        android:textSize="30sp"
        android:background="@drawable/rect"/>

    <Button
        android:id="@+id/topUp_btn"
        android:layout_toEndOf="@id/foods_btn"
        android:layout_below="@id/snacks_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/top_ups"
        android:textAllCaps="false"
        android:onClick="gotoTopUpPage"
        android:padding="20dp"
        android:textSize="30sp"
        android:background="@drawable/rect"/>



</RelativeLayout>